# riddle-lang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_en.md  RiddleLexer.g4  RiddleParser.g4
docs/: SemNode.md
parser/: RiddleLexer.cpp  RiddleLexer.h  RiddleLexer.interp  RiddleLexer.tokens  RiddleParser.cpp  RiddleParser.h  RiddleParser.interp  RiddleParser.tokens  RiddleParserBaseListener.cpp  RiddleParserBaseListener.h  RiddleParserBaseVisitor.cpp  RiddleParserBaseVisitor.h  RiddleParserListener.cpp  RiddleParserListener.h  RiddleParserVisitor.cpp  RiddleParserVisitor.h
resources/: config.h.in
src/: config.h  main.cpp
src/Config/: BaseType.ixx  BasicOperator.ixx  BasicType.ixx  Init.ixx  LLVMConfig.ixx  OperatorImpl.ixx  Target.ixx
src/Generate/: GenCode.ixx  Module.ixx
src/Grammar/: GramVisitor.ixx  PackageVisitor.ixx
src/IR/: Context.ixx  GenCode.ixx  GenContext.ixx  IRContext.ixx  Instruct.ixx  Module.ixx  Objects.ixx  ParserStmt.ixx  Statements.ixx  TypeParser.ixx
src/Managers/: ClassManger.ixx  ErrorManager.ixx  FuncManager.ixx  ObjectManager.ixx  OpManager.ixx  SemManager.ixx  StmtManager.ixx  ValueManager.ixx  VarManager.ixx
src/Parsing/: GramAnalysis.ixx  PackageVisitor.ixx  StmtVisitor.ixx
src/Semantic/: SemAnalysis.ixx  SemContext.ixx  SemNode.cpp  SemNode.ixx  Type.ixx  ValueType.ixx
src/Semantics/: Modifier.ixx  Property.ixx  SemAnalysis.ixx  SemContext.ixx  SemNode.ixx
src/Support/: Allocator.ixx  BuildQueue.ixx  Cast.ixx  CommandHelp.ixx  FileTools.ixx  FilesTools.ixx  Hash.hpp  ItaniumABI.ixx  Linker.ixx  Options.ixx  Package.ixx  Unit.ixx
src/Tools/: Allocator.ixx  BuildQueue.ixx  FilesTools.ixx  Linker.cpp  Linker.h  Linker.ixx  Options.ixx
src/Translate/: CHeader.ixx
src/Types/: Class.ixx  File.ixx  Identifier.ixx  Modifier.ixx  Statements.ixx  Template.ixx  Unit.cpp  Unit.ixx  Value.ixx  Variable.ixx
src/Visitors/: PackageVisitor.cpp  PackageVisitor.h  PackageVisitor.ixx  StmtVisitor.cpp  StmtVisitor.h  StmtVisitor.ixx
test/: test.cpp  test.red  test2.red
test/std/: io.red
